# WebProject

backend/: pyproject.toml
backend/chatgpt/: .env  .gitignore  pyproject.toml
backend/chatgpt/chat/: chatgpt.py  models.py  prompt.py  serializers.py  urls.py  views.py
backend/chatgpt/chat/migrations/: 0001_initial.py  0002_chatgroup_chatgpthistory_chat_group.py
backend/chatgpt/chatgpt/: settings.py  urls.py
backend/chatgpt/users/: autorizate.py  mail.py  models.py  serializers.py  urls.py  views.py
backend/chatgpt/users/migrations/: 0001_initial.py  0002_forgotpassword.py
frontend/chatgpt/: README.md  angular.json  package-lock.json  package.json
frontend/chatgpt/src/: index.html
frontend/chatgpt/src/app/: api.service.ts  app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/chatgpt/src/app/components/chat/: chat.component.css  chat.component.html  chat.component.ts
frontend/chatgpt/src/app/components/login/: login.component.html  login.component.ts
frontend/chatgpt/src/app/components/main/: main.component.css  main.component.html
frontend/chatgpt/src/app/models/: chat.model.ts  token.ts
